<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.nxiz.android.examenlp3.Calculadora"
    tools:showIn="@layout/activity_calculadora">

    <EditText
        android:id="@+id/txtDist"
        android:layout_width="584dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nada"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/btnSen"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:text="@string/seno_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintVertical_bias="0.381"/>

    <Button
        android:id="@+id/btnCos"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:text="@string/coseno_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintVertical_bias="0.381"/>

    <Button
        android:id="@+id/btnTan"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:text="@string/tangente_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintVertical_bias="0.381"/>

    <Button
        android:id="@+id/btnAsen"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:text="@string/arcSen_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintVertical_bias="0.533"/>

    <Button
        android:id="@+id/btnAcos"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:text="@string/arcCos_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintVertical_bias="0.533"/>

    <Button
        android:id="@+id/btnAtan"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:text="@string/arcTan_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintVertical_bias="0.533"/>

    <Button
        android:id="@+id/btnFact"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:text="@string/fact_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintVertical_bias="0.688"/>

    <Button
        android:id="@+id/btnPot"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:text="@string/potencia_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintVertical_bias="0.688"/>

    <Button
        android:id="@+id/btnPi"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:text="@string/pi_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintVertical_bias="0.688"/>

    <Button
        android:id="@+id/btnLog"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:text="@string/log_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintVertical_bias="0.84"/>

    <Button
        android:id="@+id/btnNum7"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/number_07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381"/>

    <Button
        android:id="@+id/btnNum8"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/number_08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintVertical_bias="0.381"/>

    <Button
        android:id="@+id/btnNum9"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/number_09"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintVertical_bias="0.381"/>

    <Button
        android:id="@+id/btnNum4"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/number_04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533"/>

    <Button
        android:id="@+id/btnNum5"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/number_05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintVertical_bias="0.533"/>

    <Button
        android:id="@+id/btnNum1"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/number_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685" />

    <Button
        android:id="@+id/btnNum3"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/number_03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintVertical_bias="0.685"/>

    <Button
        android:id="@+id/btnNum2"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/number_02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintVertical_bias="0.685"/>

    <Button
        android:id="@+id/btnNum6"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/number_06"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintVertical_bias="0.533"/>

    <Button
        android:id="@+id/btnNum0"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:text="@string/number_00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintVertical_bias="0.853"/>

    <Button
        android:id="@+id/btnPunto"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/punto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintVertical_bias="0.84"/>

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="57dp"
        android:layout_height="82dp"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintVertical_bias="0.807"/>

    <Button
        android:id="@+id/btnSum"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/sumar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintVertical_bias="0.84"/>

    <Button
        android:id="@+id/btnRest"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/restar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintVertical_bias="0.685"/>

    <Button
        android:id="@+id/btnMult"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/multiplicar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintVertical_bias="0.533"/>

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/dividir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintVertical_bias="0.381"/>

    <Button
        android:id="@+id/btnClean"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/clean_limp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintVertical_bias="0.229"/>

    <Button
        android:id="@+id/btnRaiz"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/raiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintVertical_bias="0.533"/>

    <Button
        android:id="@+id/btnPorcen"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/pocentaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintVertical_bias="0.381"/>

    <Button
        android:id="@+id/btnLimp"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:text="@string/Limp_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintVertical_bias="0.229"/>


</android.support.constraint.ConstraintLayout>
